# trbuf

./: .gitignore  CMakeLists.txt  README.md  auto.sh
include/: RingBuffer.h  Trbuf.h
src/: RingBuffer.cpp  Trbuf.cpp
tests/: Makefile  RingBufferTest.cpp  TrbufTest.cpp
